Fix z-index of Hero elements so all are clickable

--- a/src/sections/Hero/Hero.scss
+++ b/src/sections/Hero/Hero.scss
@@ -26,6 +26,7 @@
 
   &__icon {
     font-size: 2rem;
+    z-index: 1;
 
     @include desktop {
       font-size: 2.5rem;
@@ -42,6 +43,7 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    z-index: 1;
 
     &--top {
       display: flex;
@@ -72,6 +74,7 @@
       align-items: center;
       bottom: 8rem;
       width: 100%;
+      z-index: 0;
 
       @include desktop {
         align-items: flex-start;
@@ -83,8 +86,14 @@
         display: flex;
         flex-direction: column;
         align-items: center;
+
         @include desktop {
           align-items: flex-start;
+        }
+
+        :hover {
+          transition: 0.3s ease-in-out;
+          scale: 1.03;
         }
       }
 
@@ -104,7 +113,7 @@
     text-align: center;
     font-size: 2rem;
     margin-bottom: 1rem;
-    z-index: 1;
+
 
     // Set up for hover animation
     background: linear-gradient(
@@ -113,6 +122,7 @@
       $text-secondary 50%,
       $text-primary 50%
     );
+
     background-clip: text;
     -webkit-background-clip: text;
     -webkit-text-fill-color: transparent;
